# BrainAlignment

./: CMakeLists.txt
include/: BrainAlignmentFilter.h  itkDualResampleImageFilter.h
src/: BrainAlignmentFilter.cxx  main.cxx
